dex/dex/dex-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dex-ingress
  namespace: kube-system
spec:
  tls:
   - secretName: 5ik8s.com
  rules:
  - host: dex.5ik8s.com
    http:
      paths:
      - path: /
        backend:
          serviceName: dex
          servicePort: 5556
